public enum Color {
    RED,
    BLUE,
    YELLOW,
    GREEN,
    PURPLE
}