public interface Drawable {
    void draw();
    void draw(Color color);
}